feat: add P3 system data management views
